--- a/style.css
+++ b/style.css
@@ -1,62 +1,191 @@
-#container {
-background-color: lightgreen;
 
-display: flex;
-flex-direction: row;
-justify-content: center;
-flex-wrap: wrap;
-
-column-gap: 40px;
-row-gap: 40px;
+body {
+    margin: 0;
 }
-
-.item {
-    height: 100px;
-    width: 25%;
-    min-width: 200px;
-
-    background-color: red;
-    
-    color: white;
-    font-size: 40px;
-    padding: 15px;
-
-    border: 2px solid black;
-}
-
-#container2 {
+.header_container{
     display: flex;
-    align-items: center;
+    justify-content: space-between;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.header_container a img{
+    height:50px;
+    width: auto;
+}
+    .menu_container{
+        display: flex;
+        justify-content: space-between;
+        list-style-type:none;
+    }
+
+.menu_container li a{
+    text-decoration: none;
+    color: gray;
+    padding: 15px;
+    text-transform: uppercase;
+}
+
+.hero-section img {
+    width:100%;
+    height: 700px;
+    object-fit: cover;
+    object-position: top;
+    filter: brightness(50%);
+    position: relative;
+}
+
+.hero-section h1{
+    text-align: center;
+    position: absolute; top: 240px; left: 0; width: 100%;
+    color: white;
+    font-size: 90px;
+    font-family: Webfont;
+}
+
+.custom-font{
+    font-family: Satisfy;
+}
+
+.another-section h2{
+    text-align: center;
+    position: relative; 
+    color: #575554;
+    font-size: 50px;
+}
+
+.another-section p{
+    text-align: center;
+    position: relative;
+    color: #858281;
+    font-size: 25px;
+    padding-left: 70px;
+    padding-right: 70px;
+}
+
+.stats-section {
+    background-image: url(img/bg-pattern.jpg);
+}
+
+.stats-section ul {
+display: flex;
+color: white;
+max-width: 960px;
+margin: 0 auto;
+justify-content: space-around;
+list-style-type: none;
+text-align: center;
+font-size: larger;
+padding: 50px 0;
+}
+
+.other-section h2 {
+    text-align: center;
+    position: relative; 
+    color: #575554;
+    font-size: 50px;
+}
+
+.other-section p {
+    text-align: center;
+    position: relative;
+    color: #858281;
+    font-size: 25px;
+    padding-left: 70px;
+    padding-right: 70px;
+    line-height: 150%;
+}
+
+ul {
+    list-style-type: none;
+}
+
+
+.other-section a {
+    position: absolute; top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
     justify-content: center;
-
-    column-gap: 40px;
-    
-    background-color: pink;
-}
-.new-item {
-    width: 100px;
-    background-color: red;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    text-decoration: none;
+    opacity: 0;
+    transition: 0.5s;
 }
 
-#container2:nth-child(1){
-    height:200px;
-}
-#container2:nth-child(2){
-    height:250px;
+.other-section a:hover{
+    transition: 0.5s;
+    opacity:1;
 }
 
-@media screen and (max-width:768px) {
-    .item{
-        background-color: black !important;
-    }
+.other-section{
+    max-width: 960px;
+    margin: auto;
 }
 
-@media screen and (max-width:1000px) {
-    .item{
-        background-color: green;
-    }
+.other-section ul {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
 }
 
-#container {
+.other-section li {
+    padding: 0;
+    margin: 0;
     display: block;
+    width: 320px;
+    height: 320px;
+    position: relative;
+}
+
+.other-section img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover !important;
+    object-position: center center;
+}
+
+
+.quote-section{
+    background-image: url(img/bg-pattern.jpg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 32px;
+    padding: 50px 0;
+    margin: 100px auto;
+    color: white;
+}
+  
+.image-section{
+    max-width: 960px;
+    margin: auto;
+}
+
+.image-section ul{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.image-section img{
+    width: 180px;
+    height: auto;
+}
+
+footer{
+    background-color: bisque;
+    padding: 100px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
 }
